--- a/cs3003-assignment2/CS3003-Assignment2.cabal
+++ b/cs3003-assignment2/CS3003-Assignment2.cabal
@@ -57,7 +57,7 @@ library
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12
 
   -- Directories containing source files.
   hs-source-dirs:      src
@@ -77,7 +77,7 @@ executable CS3003-Assignment2
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base >=4.12 && <4.13
+  build-depends:       base >=4.12
 
   -- Directories containing source files.
   hs-source-dirs:      src
